ui-issue: Fix 'navbar' fixed overlapping issue

--- a/css/app.sass
+++ b/css/app.sass
@@ -30,8 +30,15 @@ h6
   @media all and (min-width: 1200px)
     width: 1180px
  
+body
+  padding-top: 87px
+
 header
+  position: fixed
+  top: 0
+  width: 100%
   background: #fff
+  z-index: 999
   nav
     display: flex
     flex-wrap: wrap
